--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
   <!-- Main Section -->
   <div id="main">
     <div class="image-carousel">
-      <img src="image1.jpg" alt="Image 1">
-      <img src="image2.jpg" alt="Image 2">
-      <img src="image3.jpg" alt="Image 3">
-      <img src="image4.jpg" alt="Image 4">
-      <img src="image5.jpg" alt="Image 5">
-      <img src="image1.jpg" alt="Image 6">
-      <img src="image2.jpg" alt="Image 7">
-      <img src="image3.jpg" alt="Image 8">
-      <img src="image4.jpg" alt="Image 9">
-      <img src="image5.jpg" alt="Image 10">
+      <img src="ProjMgmt.jpg" alt="Image 1">
+      <img src="ProjMgmt.jpg" alt="Image 2">
+      <img src="ProjMgmt.jpg" alt="Image 3">
+      <img src="ProjMgmt.jpg" alt="Image 4">
+      <img src="ProjMgmt.jpg" alt="Image 5">
+      <img src="ProjMgmt.jpg" alt="Image 6">
+      <img src="ProjMgmt.jpg" alt="Image 7">
+      <img src="ProjMgmt.jpg" alt="Image 8">
+      <img src="ProjMgmt.jpg" alt="Image 9">
+      <img src="ProjMgmt.jpg" alt="Image 10">
     </div>
     <!-- Containers -->
     <div class="container">
