--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
     display: inline-flex; /* Display navigation items inline */
     border-radius: 50px;
   }
-/.;, lmknbvgfcx
   .navigation img {
     border-radius: 50%;
   }
@@ -199,7 +198,7 @@
   #main {
     margin-top: var(--navbar-height);
     padding-top: var(--navbar-height);
-    display: flex;
+    display: wrap
     flex-direction: column;
     align-items: center;
     gap: 32px;
@@ -214,7 +213,7 @@
 
   /* Container styles */
   .container {
-    display: flex;
+    display: wrap
     flex-wrap: wrap;
     justify-content: center;
     border: 1px solid black;
@@ -255,6 +254,7 @@
 .image-carousel {
   display: flex;
   width: 100%;
+  height: 200px;
   flex: 0 0 100%; /* Each item takes up full width */
   overflow: hidden;
   transition: transform 1s ease-in-out;
