--- a/index.html
+++ b/index.html
@@ -41,14 +41,7 @@
     <div class="container">
       <div class="title">Container 1</div>
       <!-- Container content goes here -->
-    </div>
-
-    <div class="container">
-      <div class="title">Container 2</div>
-      <!-- Container content goes here -->
-    </div>
-    <!-- Add more containers as needed -->
-  </div>
+    </div>>
 
   <!-- Footer -->
   <footer>
