--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
     border-radius: 8px;
     transition: background-color 0.3s;
     width: 100%;
+    margin: 32, 32, 32, 32;
 
     box-sizing: border-box;
     padding: 16px;
