--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
     border-radius: 8px;
     transition: background-color 0.3s;
     width: 100%;
-    margin: 32, 32, 32, 32;
+    margin: 32px, 32px, 32px, 32px;
+    padding: 32px, 32px, 32px, 32px;
 
     box-sizing: border-box;
     padding: 16px;
