--- a/index.html
+++ b/index.html
@@ -26,16 +26,12 @@
   <!-- Main Section -->
   <div id="main">
     <div class="image-carousel">
-      <img src="ProjMgmt.jpg" alt="Image 1">
-      <img src="ProjMgmt.jpg" alt="Image 2">
-      <img src="ProjMgmt.jpg" alt="Image 3">
-      <img src="ProjMgmt.jpg" alt="Image 4">
-      <img src="ProjMgmt.jpg" alt="Image 5">
-      <img src="ProjMgmt.jpg" alt="Image 6">
-      <img src="ProjMgmt.jpg" alt="Image 7">
-      <img src="ProjMgmt.jpg" alt="Image 8">
-      <img src="ProjMgmt.jpg" alt="Image 9">
-      <img src="ProjMgmt.jpg" alt="Image 10">
+      <img src="Screen1.png" alt="Image 1">
+      <img src="Screen2.png" alt="Image 2">
+      <img src="Screen3.png" alt="Image 3">
+      <img src="Screen4.png" alt="Image 4">
+      <img src="Screen5.png" alt="Image 5">
+      <img src="Screen6.png" alt="Image 6">
     </div>
     <!-- Containers -->
     <div class="container">
