--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <img src="Screen4.png" alt="Image 4">
       <img src="Screen5.png" alt="Image 5">
       <img src="Screen6.png" alt="Image 6">
+      <img src="CMS Power App.png" alt="Image 6">
     </div>
     <!-- Containers -->
     <div class="container">
