--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       <img src="Screen1.png" alt="Image 1">
       <img src="Screen2.png" alt="Image 2">
       <img src="Screen3.png" alt="Image 3">
-      <img src="Screen4.png" alt="Image 4">
-      <img src="Screen5.png" alt="Image 5">
-      <img src="Screen6.png" alt="Image 6">
+      <img src="CMS_PowerApp.png" alt="Image 4">
+      <img src="ContactForm_PowerApp.png" alt="Image 5">
+      <img src="Contact_Webform.png" alt="Image 6">
       <img src="CMS Power App.png" alt="Image 6">
     </div>
     <!-- Containers -->
